--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -140,6 +140,7 @@
     <Content Include="User\FakeOCBCLogin.aspx" />
     <Content Include="User\FakeUOBLogin.aspx" />
     <Content Include="User\FamilyGroupManagement.aspx" />
+    <Content Include="User\ForumPage.aspx" />
     <Content Include="User\ModuleInformation.aspx" />
     <Content Include="User\PhoneScamsQuiz.aspx" />
     <Content Include="User\PointsDebug.aspx" />
@@ -248,6 +249,13 @@
     </Compile>
     <Compile Include="User\FamilyGroupManagement.aspx.designer.cs">
       <DependentUpon>FamilyGroupManagement.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\ForumPage.aspx.cs">
+      <DependentUpon>ForumPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\ForumPage.aspx.designer.cs">
+      <DependentUpon>ForumPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\ModuleInformation.aspx.cs">
       <DependentUpon>ModuleInformation.aspx</DependentUpon>
@@ -454,6 +462,7 @@
   <ItemGroup>
     <Folder Include="tessdata\" />
     <Folder Include="Uploads\Blog_Pictures\" />
+    <Folder Include="Uploads\forum_pictures\" />
     <Folder Include="Uploads\Modules\" />
   </ItemGroup>
   <PropertyGroup>
