--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -185,7 +185,9 @@
     <Content Include="Global.asax" />
     <Content Include="Staff\EditUsers.aspx" />
     <Content Include="Staff\IndividualBlogStafff.aspx" />
+    <Content Include="Staff\IndividualForumStaff.aspx" />
     <Content Include="Staff\ManageBlog.aspx" />
+    <Content Include="Staff\ManageForum.aspx" />
     <Content Include="Staff\StaffAddModules.aspx" />
     <Content Include="Staff\StaffManageParticipants.aspx" />
     <Content Include="Staff\StaffManageSessions.aspx" />
@@ -265,12 +267,26 @@
     <Compile Include="Staff\IndividualBlogStafff.aspx.designer.cs">
       <DependentUpon>IndividualBlogStafff.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Staff\IndividualForumStaff.aspx.cs">
+      <DependentUpon>IndividualForumStaff.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Staff\IndividualForumStaff.aspx.designer.cs">
+      <DependentUpon>IndividualForumStaff.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Staff\ManageBlog.aspx.cs">
       <DependentUpon>ManageBlog.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Staff\ManageBlog.aspx.designer.cs">
       <DependentUpon>ManageBlog.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Staff\ManageForum.aspx.cs">
+      <DependentUpon>ManageForum.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Staff\ManageForum.aspx.designer.cs">
+      <DependentUpon>ManageForum.aspx</DependentUpon>
     </Compile>
     <Compile Include="Staff\StaffAddModules.aspx.cs">
       <DependentUpon>StaffAddModules.aspx</DependentUpon>
